# HAND

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32-s3-devkitm-1  sdkconfig.esp32-s3-devkitm-1.old  sdkconfig.hand_firmware
.github/workflow/: build_workflow.yml
.github/workflows/: build_workflow.yml
data/: README.md
data/vl53l1x_proto_test/: README.md  vl53l1x_proto_test.json
doc/hand_pcb_files/: README
include/: hand_common.h  hand_config.h  hand_hw_config.h  hand_wifi_config.h
lib/: README.md
lib/CH101/: library.json
lib/TCA6408A/: tca6408a.c  tca6408a.h
lib/devices/TCA6408A/: CMakeLists.txt  extra_script.py  library.json  tca6408a.c  tca6408a.h
lib/devices/TCA6408A/platform/dummy/: tca6408a_dummy.c  tca6408a_dummy.h
lib/devices/TCA6408A/platform/espidf/: tca6408a_espidf.c  tca6408a_espidf.h
lib/espidf_wrapper/: espidf_wrapper.c  espidf_wrapper.h  library.json
scripts/: hand_hook.py  hand_test_hook.py  hand_test_wifi.py  package_install.py  wifi_ssid.py
scripts/matlab/: parse_vl53l1x_hand_msg.m
src/: CMakeLists.txt  board_config.h  device_config.h  dummy.c  hand_app_config.h  idf_component.yml  main.c  main.chx01_group_test.c  main.kx132_test_id.c  main.single_motor_vibration_test.c  main.tca6408a_test  main.udp_log_test.c  main.vl53l1x_group_test.c  main.vl53l1x_test_id.c  user_chx01_config.h
src/espidf_framework_test/: test_only.espidf_select_cpu
src/hand_modules/: hand_common.c  hand_common.h  hand_global.c  hand_global.h
src/hand_test/: README  README.md  (+1 more)
test/: README  README.md  test_main.template
(+125 files in other folders)
